web-infras/parser/tests/fixtures/babel/es2018/object-rest-spread/comma-after-spread-for-in/output.txt
[SyntaxError]: Rest parameter must be last formal parameter (1,13)
1|for ({...a,} in []);
 |           ^
